# kernel-whisper

./: .gitignore  README.md  pyproject.toml  send.sh
freemvmt/: sandbox.ipynb
freemvmt/samples/: chicago-to-texas.mid  hi.aac  super.aac
